fix: Fixed action

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -62,12 +62,12 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       # Build and push Docker image
-      - name: Build and push Docker image
-        id: build-and-push
-        uses: actions/setup-java@v3
+      - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
+      - name: Build and push Docker image
+        id: build-and-push
         run: ./gradlew bootBuildImage --publishImage
 
       # Sign the resulting Docker image digest except on PRs.
