feat: Improved docker

--- a/compose-prod.yaml
+++ b/compose-prod.yaml
@@ -1,6 +1,21 @@
 version: '3.1'
 
 services:
+  backend:
+    image: josue270193/challenge_calculator:0.0.2-SNAPSHOT
+    ports:
+      - '8080:8080'
+    environment:
+      DB_URL: postgres:5432/calculator
+      DB_USER: calculator
+      DB_PASSWORD: calculator
+      KAFKA_URL: kafka:19092
+    depends_on:
+      - postgres
+      - kafka
+    networks:
+      - calculator_network
+
   postgres:
     image: postgres:13.12
     ports:
@@ -9,6 +24,8 @@ services:
       POSTGRES_USER: calculator
       POSTGRES_PASSWORD: calculator
       POSTGRES_DB: calculator
+    networks:
+      - calculator_network
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.5
@@ -18,6 +35,8 @@ services:
       ZOOKEEPER_SYNC_LIMIT: 2
     ports:
       - '2181:2181'
+    networks:
+      - calculator_network
 
   kafka:
     image: confluentinc/cp-kafka:7.3.5
@@ -25,10 +44,16 @@ services:
       - zookeeper
     ports:
       - '9092:9092'
+      - '19092:19092'
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_HOST://kafka:19092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    networks:
+      - calculator_network
+
+networks:
+  calculator_network:
