--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.6-SNAPSHOT'
-    id 'io.spring.dependency-management' version '1.1.3'
+    id 'org.springframework.boot' version '3.2.0'
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group = 'app.josue'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.2-SNAPSHOT'
 
 java {
-    sourceCompatibility = '17'
+    sourceCompatibility = '21'
 }
 
 configurations {
@@ -20,7 +20,6 @@ configurations {
 
 repositories {
     mavenCentral()
-    maven { url 'https://repo.spring.io/snapshot' }
 }
 
 dependencies {
@@ -53,8 +52,14 @@ tasks.named('test') {
 }
 
 tasks.named("bootBuildImage") {
-    imageName = "docker.io/josue270193/${project.name}"
+    imageName = "docker.io/josue270193/${project.name}:${project.version}"
+//    docker {
+//        host = "unix:///home/josue/.docker/desktop/docker.sock"
+//    }
     docker {
-        host = "unix:///home/josue/.docker/desktop/docker.sock"
+        publishRegistry {
+            username = providers.environmentVariable('DOCKER_USER')
+            password = providers.environmentVariable('DOCKER_PASSWORD')
+        }
     }
 }
